added a short Akan description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <style></style>
   <body>
       <h1>Find out your Akan Name!</h1>
-       <p>Today you shall find out your Akan name whether your male or female</p>gi
-
+       <p>Today you shall find out your Akan name whether your male or female</p>
+       <p> Akan names come from old African naming systems located in West Africa from countries such as Ghana and Ivory Coast</p>
+       <p>factors to e considered when giving a child an Akan name are;</p>
+       <ol>
+           <li>The day the child was born</li>
+           <li>The gender of the child</li>
+           <li>Each child was born with a name associated to their soul</li>
+           <li>Rank among siblings</li>
+       </ol>
+       <p></p>
   </body>
 </html>
