--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Akan Names</title>
 </head>
-  <style></style>
+  <style>
+      
+  </style>
   <body>
       <h1>Find out your Akan Name!</h1>
        <p>Today you shall find out your Akan name whether your male or female</p>
@@ -15,6 +17,6 @@
            <li>Each child was born with a name associated to their soul</li>
            <li>Rank among siblings</li>
        </ol>
-       <p></p>
+       <p><img src="images/Akan.jpg" alt="A photo of Akan"></p>
   </body>
 </html>
