--- a/index.html
+++ b/index.html
@@ -1,22 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Akan Names</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-  <style>
-      
-  </style>
   <body>
       <h1>Find out your Akan Name!</h1>
+      <hr>
        <p>Today you shall find out your Akan name whether your male or female</p>
        <p> Akan names come from old African naming systems located in West Africa from countries such as Ghana and Ivory Coast</p>
-       <p>factors to e considered when giving a child an Akan name are;</p>
+       <p>factors to be considered when giving a child an Akan name are;</p>
        <ol>
            <li>The day the child was born</li>
            <li>The gender of the child</li>
            <li>Each child was born with a name associated to their soul</li>
            <li>Rank among siblings</li>
        </ol>
-       <p><img src="images/Akan.jpg" alt="A photo of Akan"></p>
+       <div class="container">
+        <div class="row mb-3">
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm"><strong>DATE OF BIRTH</strong></label>
+          <div class="col-sm-10">
+          <label for="colFormLabel" class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-10">
+            <input type="date" class="form-control" id="colFormLabel" placeholder="col-form-label">
+          </div>
+        </div>
+        <div class="row">
+          <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg"><strong>Which country are you from?</strong></label>
+          <div class="col-sm-10">
+            <input type="nations" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg">
+          </div>
+          <p>Kinldy select your gender below. The names have been written in Yoruba, a traditional West African language but there is English translation</p>
+          Okunrin(Yoruba for male)
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+        <label class="form-check-label" for="gridRadios2">
+        </div>
+        Obinrin(French for female)
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+      <label class="form-check-label" for="gridRadios2">
+      </div>
+
+      <div class="col-auto">
+        <label class="visually-hidden" for="autoSizingSelect">Which country that uses akan names do you resonate with?
+           one being <em><strong>Ghana</strong></em>, two being <em><strong>Ivory Coast</strong></em> or three <em><strong>Nigeria</strong></em>?
+        </label>
+        <select class="form-select" id="Ghana">
+          <option selected>Choose...</option>
+          <option value="Ghana">One</option>
+          <option value="Ivory Coast">Two</option>
+          <option value="Nigeria">Three</option>
+        </select>
+      </div>
+
+        </div>
   </body>
 </html>
