added Akan names to JS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Akan Names</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
   <body>
       <h1>Find out your Akan Name!</h1>
@@ -61,10 +61,11 @@
       
       
       </div><div class="col-12">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="Submit" class="btn btn-primary">Submit</button>
       </div>
 
 
         </div>
+        <script src="script.js"></script>
   </body>
 </html>
