--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
            <li>Rank among siblings</li>
        </ol>
        <div class="container">
+         <form id="frmAkans">
         <div class="row mb-3">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm"><strong>DATE OF BIRTH</strong></label>
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm"><strong>Date of birth</strong></label>
           <div class="col-sm-10">
           <label for="colFormLabel" class="col-sm-2 col-form-label"></label>
           <div class="col-sm-10">
@@ -36,14 +37,14 @@
         </label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+        <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="option2">
         <label class="form-check-label" for="gridRadios2">
         </div>
         Obinrin(French for female)
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+      <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="option2">
       <label class="form-check-label" for="gridRadios2">
       </div>
 
