removed an option in choose

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <div class="container">
          <form id="frmAkans">
         <div class="row mb-3">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm"><strong>Date of birth</strong></label>
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm"><strong>DOB</strong></label>
           <div class="col-sm-10">
           <label for="colFormLabel" class="col-sm-2 col-form-label"></label>
           <div class="col-sm-10">
@@ -50,13 +50,12 @@
 
       <div class="col-auto">
         <label class="visually-hidden" for="autoSizingSelect">Which country that uses akan names do you resonate with?
-           one being <em><strong>Ghana</strong></em>, two being <em><strong>Ivory Coast</strong></em> or three <em><strong>Nigeria</strong></em>?
+           one being <em><strong>Ghana</strong></em>, two being <em><strong>Ivory Coast</strong></em> ?
         </label>
         <select class="form-select" id="Ghana">
           <option selected>Choose...</option>
           <option value="Ghana">One</option>
           <option value="Ivory Coast">Two</option>
-          <option value="Nigeria">Three</option>
         </select>
       
       
