--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <li>Each child was born with a name associated to their soul</li>
            <li>Rank among siblings</li>
        </ol>
-       <img src="images/Akan.jpg" alt="akan">
+       <img src="images/imageakan.jpg" alt="akan">
        <div class="container">
          <form id="frmAkans">
         <div class="row mb-3">
