--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="option2">
         <label class="form-check-label" for="gridRadios2">
         </div>
-        Obinrin(French for female)
+        <em><strong>Obinrin(French for female)</strong></em>
       </label>
     </div>
     <div class="form-check">
