added strong on Obinrin

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input type="nations" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg">
           </div>
           <p>Kinldy select your gender below. The names have been written in Yoruba, a traditional West African language but there is English translation</p>
-          Okunrin(Yoruba for male)
+          <em><strong>Okunrin(Yoruba for male)</strong></em>
         </label>
       </div>
       <div class="form-check">
