--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
   <body>
       <h1>Find out your Akan Name!</h1>
+      <h2>By Andrew Njogu</h2>
       <hr>
        <p>Today you shall find out your Akan name whether your male or female</p>
        <p> Akan names come from old African naming systems located in West Africa from countries such as Ghana and Ivory Coast</p>
