corrected errors in body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>Find out your Akan Name!</h1>
       <h2>By Andrew Njogu</h2>
       <hr>
-       <p>Today you shall find out your Akan name whether your male or female</p>
+       <p>Today you shall find out your Akan depending on your gender.</p>
        <p> Akan names come from old African naming systems located in West Africa from countries such as Ghana and Ivory Coast</p>
        <p>factors to be considered when giving a child an Akan name are;</p>
        <ol>
