added more akan knowledge to body

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
        <img src="images/imageakan.jpg" alt="akan">
        <div class="form-div">
         <div class="form-header">
+          <p>Even without using this form you can just key in your date of birth below and find out which date you were born and use the image above to find out your akan name!</p>
           <h2>Kindly enter your date in the form to get your Akan Name</h2>
         </div>
         <div class="name-form">
