--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2>Kindly enter your date in the form to get your Akan Name</h2>
         </div>
         <div class="name-form">
-          <form id="frmAkans">
+          <form id="formAkans">
             <label for="selected-date"><strong>DOB:</strong></label>
             <input type="date" id="dob" name="dob" value="">
             <div class="form-radio">
