--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Akan Names</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
-  <body>
+  <body style="background-image: url(images/westafrica.jpg);background-position: center;background-size: cover;"> 
+    
       <h1>Find out your Akan Name!</h1>
       <h2>By Andrew Njogu</h2>
       <hr>
@@ -40,7 +41,7 @@
               </label>
               <input class="form-check-input" type="radio" name="gender" id="female">
             </div>
-            <input type="submit" value="Submit" name="submit">
+            <input type="submit" id="submit" value="Submit" name="submit">
           </form>
         </div>
       </div>
