--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="background-image: url(images/westafrica.jpg);background-position: center;background-size: cover;"> 
     
       <h1>Find out your Akan Name!</h1>
-      <h2>By Andrew Njogu</h2>
+      <h2><strong> Andrew Njogu,</strong></h2>
       <hr>
        <p>Today you shall find out your Akan depending on your gender.</p>
        <p> Akan names come from old African naming systems located in West Africa from countries such as Ghana and Ivory Coast</p>
