corrected spelling error

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h2>Kindly enter your date in the form to get your Akan Name</h2>
         </div>
         <div class="name-form">
-          <form id="formAkans">
+          <form id="frmAkans">
             <label for="selected-date"><strong>DOB:</strong></label>
             <input type="date" id="dob" name="dob" value="">
             <div class="form-radio">
@@ -41,7 +41,7 @@
               </label>
               <input class="form-check-input" type="radio" name="gender" id="female">
             </div>
-            <input type="submit" id="submit" value="Submit" name="submit">
+            <input type="submit" id="submit" value="Submit">
           </form>
         </div>
       </div>
